--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,26 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Google Font Mitr -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mitr" />
+
   <!-- jQuery -->
-  <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="http://code.jquery.com/jquery-3.2.1.min.js" 
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" 
+          crossorigin="anonymous"></script>
   
   <!-- Bootstrap JS and CSS -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+          integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+                         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+                         crossorigin="anonymous" />
 
   <!-- Charts.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js" integrity="sha256-N4u5BjTLNwmGul6RgLoESPNqDFVUibVuOYhP4gJgrew=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js" 
+          integrity="sha256-N4u5BjTLNwmGul6RgLoESPNqDFVUibVuOYhP4gJgrew=" 
+          crossorigin="anonymous"></script>
   
   <!-- JQuery UI Slider Widget -->
   <script src="static/jqui/jquery-ui.min.js"></script>
@@ -33,6 +44,13 @@
 </head>
 
 <body>
+
+  <div id="loading-overlay">
+    <div id="overlay"></div>
+    <div id="spinner">
+      <p>AltDash<img class="logo-load" src="static/img/sdg_wheel.png" /></p>
+    </div>
+  </div>
 
   <div id="body-header" class="plain">
     {% include 'bodyheader.html' %}
