--- a/templates/bodyheader.html
+++ b/templates/bodyheader.html
@@ -10,11 +10,15 @@
         <span class="icon-bar"></span>
       </button>
       -->
-      <a class="navbar-brand" href="#">AltDash<img class="logo" src="static/img/sdg_wheel.png" /></a>
+      <a class="navbar-brand" href="/">AltDash<img class="logo" src="static/img/sdg_wheel.png" /></a>
     </div> <!-- /.navbar-header -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div id="nav-menu" class="collapse navbar-collapse">
+      <p>
+        a proposed Alternative Dashboard for examining World Bank data<br /> 
+        as it reflects progress toward the Sustainable Development Goals.
+      </p>
       <!-- We don't actually navigate anywhere
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="/">Home<span class="sr-only"> (current)</span></a></li>
