--- a/templates/charttiles.html
+++ b/templates/charttiles.html
@@ -6,16 +6,18 @@
     <div id="col-scatterchart" class="col-xs-12 col-md-8">
       <div id="row-btnselect" class="row">
         <div id="col-mapbtn" class="col-xs-3">
-          <button id="btn-map" class="btn btn-default form-control btn-btnselect"
-                  type="button" data-target="#row-body-worldmap"
-                  data-toggle="extra-hidden" data-sender="#row-body-charttiles">
+          <button id="btn-map" type="button" disabled
+                  class="btn btn-default form-control btn-btnselect" 
+                  data-toggle="extra-hidden"
+                  data-target="#row-body-worldmap"
+                  data-sender="#row-body-charttiles">
             World Map
           </button>
         </div><!-- /#col-mapbtn -->
         <div id="col-chartselect" class="col-xs-6">
           <form id="country-selector"> 
-            <select id="select-country" name="country" class="form-control"
-                    data-country="">
+            <select id="select-country" name="country" data-country="" disabled
+                    class="btn btn-default form-control btn-btnselect">
               {% for country in countries %}
                 <option value="{{ country.country_id }}" class="opt-country">
                   {{ country.name }}
@@ -25,8 +27,9 @@
           </form>
         </div><!-- /#col-chartselect -->
         <div id="col-randombtn" class="col-xs-3">
-          <button id="btn-random" class="btn btn-default form-control btn-btnselect" type="button">
-            New Random
+          <button id="btn-random" type="button" disabled
+                  class="btn btn-default form-control btn-btnselect">
+            Surprise Me
           </button>
         </div><!-- /#col-randombtn -->
       </div><!-- /#row-btnselect -->
@@ -46,7 +49,7 @@
     </div><!-- /#col-countryinfo1 -->
     <div id="col-tiles" class="col-xs-12 col-md-4">
       {% for goal in goals %}
-        <button id="g{{ goal.goal_pre }}sm" type="button"
+        <button id="g{{ goal.goal_pre }}sm" type="button" disabled
                 class="btn btn-default tile tile-sm g{{ goal.goal_pre }}"
                 title="Goal {{ goal.goal_pre }}: {{ goal.title }}"
                 data-toggle="extra-hidden"
