--- a/static/style.css
+++ b/static/style.css
@@ -132,18 +132,20 @@ canvas {
 }
 
 .ui-slider, .ui-slider-horizontal {
-    -webkit-appearance: none;  /* Override default CSS styles */
+    -webkit-appearance: none;
+    -moz-appearance: none;  /* Override default CSS styles */
     appearance: none;
     width: 100%;
     height: 15px;
-    background: #eee;
+    background: #ccc;
     outline: none;
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: 0s; /* no transition time */
+    -webkit-transition: 0s;
+    -moz-transition: 0s; /* no transition time */
     transition: opacity 0s;
-    border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 /* Mouse-over effects */
@@ -162,9 +164,9 @@ canvas {
     display: inline-block;
     top: -5px;
     cursor: pointer;
-    border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .ui-slider .ui-slider-handle::-webkit-slider-thumb, 
@@ -223,9 +225,9 @@ canvas {
     text-align: center;
     text-decoration: none;
     background-color: #ccc;
-    border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 /* Goal Tiles */
@@ -309,6 +311,10 @@ canvas {
 /***************************/
 /* SDG, UN, WB Section */
 /***************************/
+
+#cont-body-wbunsdg .h4, #cont-body-wbunsdg h4 {
+    margin-top: 20px;
+}
 
 
 /***************************/
