css tiny cleanup

--- a/templates/bodyheader.html
+++ b/templates/bodyheader.html
@@ -16,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div id="nav-menu" class="collapse navbar-collapse">
       <p>
-        a proposed Alternative Dashboard for examining World Bank data<br /> 
+        A proposed Alternative Dashboard for examining World Bank data<br /> 
         as it reflects progress toward the Sustainable Development Goals.
       </p>
       <!-- We don't actually navigate anywhere
