--- a/templates/bodyfooter.html
+++ b/templates/bodyfooter.html
@@ -2,25 +2,22 @@
   <div id="row-footer" class="row footer-row">
       <div id="col-footer" class="col-xs-12">
         <p>
-          &copy; 2017 <a href="http://meggangreen.com" target="_blank" 
-          title="Meggan M Green">Meggan M Green</a>
+          &copy; 2017 <a href="http://meggan.green" target="_blank" 
+          title="Meggan M Green" class="outside-link">Meggan M Green</a>
         </p>
         <p>
-          <a href="/" title="AltDash">AltDash</a>
-          is neither endorsed nor affiliated in any way with 
-          <a href="https://worldbank.org/" target="_blank" title="The World Bank">
-            The World Bank
-          </a>
-          or 
-          <a href="http://www.un.org/" target="_blank" title="United Nations">
-            The United Nations
-          </a>
+          AltDash is neither endorsed nor affiliated in any way with 
+          <a href="https://worldbank.org/" target="_blank" 
+             title="The World Bank" class="outside-link">The World Bank</a>
+          or the
+          <a href="http://www.un.org/" target="_blank" 
+             title="United Nations" class="outside-link">United Nations</a>
         </p>
         <p>
           All data used in accordance with the
-          <a href="https://data.worldbank.org/summary-terms-of-use" target="_blank" title="Open Data Terms of Use">
-            World Bank Open Data Terms of Use
-          </a>
+          <a href="https://data.worldbank.org/summary-terms-of-use" target="_blank"
+             title="Open Data Terms of Use" class="outside-link"
+             >World Bank Open Data Terms of Use</a>
         </p>
       </div><!-- /#col-footer -->
     </div><!-- /#row-footer -->
