--- a/templates/sdgunwb.html
+++ b/templates/sdgunwb.html
@@ -22,10 +22,9 @@
     </div><!-- /#col-sdg -->
     <div id="col-un" class="col-xs-12 col-md-4">
       <h4>The United Nations</h4>
-      <p>
-        <a href="http://www.un.org/" target="_blank" title="United Nations">
-          The United Nations
-        </a>
+      <p>The
+        <a href="http://www.un.org/" target="_blank" title="United Nations"
+           class="outside-link">United Nations</a>
         is an international organization founded in 1945. It
         is currently made up of 193 Member States. The mission and work of the
         United Nations are guided by the purposes and principles contained in
@@ -35,19 +34,18 @@
         Due to its Charter and its unique international character, the United
         Nations can take action on the issues confronting humanity in the 21st
         century, like those covered in the 2030 Agenda for Sustainable
-        Development. All SDG images on AltDash were downloaded from the <a 
-        href="http://www.un.org/sustainabledevelopment/" target="_blank" 
-        title="UN SDG Site">UN SDG Site</a> and not modified other than to 
-        facilitate the AltDash site functionality.
+        Development. All SDG images on AltDash were downloaded from the
+        <a href="http://www.un.org/sustainabledevelopment/" target="_blank" 
+        title="UN SDG Site" class="outside-link">UN SDG Site</a>
+        and not modified other than to facilitate the AltDash site functionality.
       </p>
       <p class="footnote">Text adapted from the UN site</p>
     </div><!-- /#col-un -->
     <div id="col-wb" class="col-xs-12 col-md-4">
       <h4>The World Bank</h4>
       <p>
-        <a href="https://worldbank.org/" target="_blank" title="The World Bank">
-          The World Bank Group
-        </a>
+        <a href="https://worldbank.org/" target="_blank" title="The World Bank"
+           class="outside-link">The World Bank Group</a>
         is a unique global partnership: five institutions 
         working for sustainable solutions that reduce poverty and build shared 
         prosperity in developing countries. It consists of 189 member 
@@ -56,10 +54,10 @@
       <p>
         One of the ways The World Bank achieves its goals is through data 
         collection and analysis. The data is freely available online as part of an
-        Open Data initiative. All data on AltDash was downloaded from the <a 
-        href="https://data.worldbank.org/data-catalog" target="_blank" title="World 
-        Bank Data Catalog">WB Data Catalog</a> and not modified other than to 
-        facilitate the AltDash database functionality.
+        Open Data initiative. All data on AltDash was downloaded from the
+        <a href="https://data.worldbank.org/data-catalog" target="_blank"
+        title="World Bank Data Catalog" class="outside-link">WB Data Catalog</a>
+        and not modified other than to facilitate the AltDash database functionality.
       </p>
       <p class="footnote">Text adapted from the World Bank site</p>
     </div><!-- /#col-wb -->
